[CSS, JS] Fix alignment on footer text, implement the exit button

--- a/06 LILIESARK-UI/assets/css/styleMenu.css
+++ b/06 LILIESARK-UI/assets/css/styleMenu.css
@@ -70,3 +70,7 @@ div#menu {
         padding: 1rem 5rem;
     }
 }
+
+.m-footer>h6 {
+    text-align: center;
+}
